--- a/ProjectSuatuHari/ParentalGuidelines/ParentalGuidelinesStoryboard.storyboard
+++ b/ProjectSuatuHari/ParentalGuidelines/ParentalGuidelinesStoryboard.storyboard
@@ -28,7 +28,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PGCollectionViewCell" id="oOS-71-hBU">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PGCollectionViewCell" id="oOS-71-hBU" customClass="PGCollectionViewCell" customModule="ProjectSuatuHari" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="12.5" width="1025" height="625"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cyV-L6-emq">
@@ -41,6 +41,9 @@
                                                 </imageView>
                                             </subviews>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="PGImage" destination="uzw-vE-tfY" id="B0q-iK-yND"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -52,6 +55,9 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="PGCollectionView" destination="ae9-oR-CgU" id="voh-gd-k3D"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
